--- a/.env.production.sample
+++ b/.env.production.sample
@@ -28,6 +28,7 @@ DB_USER=mastodon
 DB_NAME=mastodon_production
 DB_PASS=
 DB_PORT=5432
+PREPARED_STATEMENTS=false
 
 # Elasticsearch (optional)
 # ------------------------
@@ -75,3 +76,10 @@ S3_ALIAS_HOST=files.example.com
 # -----------------------
 IP_RETENTION_PERIOD=31556952
 SESSION_RETENTION_PERIOD=31556952
+
+# ----------
+# 独自の設定
+# ----------
+MAX_CHARS=3000
+MY_NETWORKS=192.168.0.0/24,192.168.1.0/24
+DEFAULT_TAG=
