--- a/.env.production.sample
+++ b/.env.production.sample
@@ -82,4 +82,4 @@ SESSION_RETENTION_PERIOD=31556952
 # ----------
 MAX_CHARS=3000
 MY_NETWORKS=192.168.0.0/24,192.168.1.0/24
-DEFAULT_TAG=
+DEFAULT_TAG=precure_fun
